@@ -25,6 +25,10 @@
     <checkstyle.version>8.42</checkstyle.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <selenium-java.version>3.141.59</selenium-java.version>
+    <webdrivermanager.version>4.4.3</webdrivermanager.version>
+    <allure.version>2.14.0</allure.version>
+    <aspectj.version>1.9.5</aspectj.version>
 
     <jdi-light-html.version>1.3.2</jdi-light-html.version>
     <selenium-java.version>3.141.59</selenium-java.version>
@@ -32,6 +36,8 @@
     <webdrivermanager.version>4.4.3</webdrivermanager.version>
     <selenium.version>3.141.59</selenium.version>
     <rest-assured.version>4.4.0</rest-assured.version>
+    <cucumber.version>6.11.0</cucumber.version>
+
   </properties>
 
   <build>
@@ -93,10 +99,21 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
+          <argLine>
+            --illegal-access=permit
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
           <suiteXmlFiles>
             <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
@@ -125,11 +142,10 @@
     </profile>
 
     <profile>
+      <id>allure-jenkins-profile</id>
       <id>jdi-tests-profile</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
       <properties>
+        <testng.suite.file>${testng.configs.path}/allure-jenkins.xml</testng.suite.file>
         <testng.suite.file>${testng.configs.path}/jdi-metals-and-colors-tests.xml</testng.suite.file>
       </properties>
     </profile>
@@ -148,6 +164,7 @@
       </properties>
     </profile>
 
+
     <profile>
       <id>jdi-tests-profile</id>
       <activation>
@@ -155,6 +172,12 @@
       </activation>
       <properties>
         <testng.suite.file>${testng.configs.path}/jdi-metals-and-colors-tests.xml</testng.suite.file>
+
+
+    <profile>
+      <id>BDD-profile</id>
+      <properties>
+        <testng.suite.file>${testng.configs.path}/BDD.xml</testng.suite.file>
       </properties>
     </profile>
 
@@ -162,6 +185,16 @@
       <id>trello-api-testing-profile</id>
       <properties>
         <testng.suite.file>${testng.configs.path}/trello-api-testing.xml</testng.suite.file>
+      </properties>
+     </profile>
+        
+     <profile>
+      <id>selenium-grid-profile</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <testng.suite.file>${testng.configs.path}/selenium-grid-profile.xml</testng.suite.file>
       </properties>
     </profile>
 
@@ -172,6 +205,7 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>${testng.version}</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -186,6 +220,12 @@
       <version>1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
+      </dependency>
+    
     <dependency>
       <groupId>com.epam.jdi</groupId>
       <artifactId>jdi-light-html</artifactId>
@@ -203,11 +243,31 @@
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
       <version>${webdrivermanager.version}</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>${selenium-java.version}</version>
+    </dependency>
+
+  </dependencies>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
       <artifactId>selenium-api</artifactId>
       <version>${selenium.version}</version>
       <scope>compile</scope>
@@ -225,12 +285,38 @@
       <artifactId>rest-assured</artifactId>
       <version>${rest-assured.version}</version>
       <scope>compile</scope>
+     </dependency>
+    
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>${cucumber.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>${cucumber.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-firefox-driver</artifactId>
+      <version>3.141.59</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-chrome-driver</artifactId>
+      <version>3.141.59</version>
       <scope>compile</scope>
     </dependency>
 
